k8s/apps/headlamp/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: headlamp
      http:
        paths:
          - backend:
              service:
                name: headlamp
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - headlamp
